flux/k9s.io/infrastructure/config/prod/gitlab-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-webservice-default
  namespace: gitlab
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
spec:
  ingressClassName: nginx-external-noauth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-gitlab-pages
  namespace: gitlab
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
spec:
  ingressClassName: nginx-external-noauth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-registry
  namespace: gitlab
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
spec:
  ingressClassName: nginx-external-noauth
